  for instance.. sts tends to severely drool over this
- Hopefully fixed the /msg unknownnick missing ERR_NOSUCHNICK bug
- Fixed the cannot change to lowercase nick thing, and made
  find_server() call hash_find_server instead of hash_find_client
  *slaps* to stskeeps :P
- Fixed a bug caused by sts's '/msg unknownnick missing ERR_NOSUCHNICK bug' fix :)
- n:lines now checked on /setname (not checked for opers)
- Fixed a bug caused by a line of code I forgot to remove ;P
- Fixed the pesky \r bug caused by windows editors. Unreal ignores \r now
  in ircd.conf
- For any sake, included the PTlink bugfix.., had some reports from
  zurna.net of it
- Fixed an n:line bug(nice bug really? :P)
- Removed behavoir of co-admins able to set +q in #channels
  (i think this was cos i was co-admin long time ago -sts)
- Made IRCops able to talk through +b, suggested by The_Cat
- Added /chgname nick :new realname and /svsname as an alias for it
  (suggested by ^Tux^)
- Fixed Sts's favorite mistake
- Indented Unreal .c files
- PROTOCTL's can be said more than once now
- Fixed a /dccdeny - /undccdeny bug reported by auspice
- Fixed the negative oper count bug. Was caused by codemastr-coding(TM)
- Removed the old non-caching motd functions
- Some IRCstats.unknown fixes..
- Took out compatibility for "Pyramid OS", is ancient and let them
  fix their fscked up os
- If a user (unknown connection) floods 2K (2048 byte) the user is
  disconnected and tkl z:lined for 600 secs (10 mins). Idea by GZ 
  from StarChat IRCd, code recoded by Stskeeps
- A ircd.conf Y:Line class is not added if it contains max clients
  > (MAXCONNECTIONS - 15)
- Flood activates only at unknown connections and only at 4K now ..
- Fixed a bug in m_setname with n:lines
- Added n:line support to m_chgname
- n:lines are now checked after a rehash
- Did a bugfix on ALN and non-ALN servers
- Fixed a bug with /chgname with incorrect parameters to other servers
- "Fixed" the /stats u bug?
- Fixed +f not working (?)